Fix overflow on sidepanel

--- a/src/app/widgets/layouts/standard.module.css
+++ b/src/app/widgets/layouts/standard.module.css
@@ -25,4 +25,5 @@
   flex-direction: column;
   background: #c0c0c0;
   width: 200px;
+  overflow-y: auto;
 }
